--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -6,9 +6,10 @@
     tools:context=".ui.main.category.CategoryFragment">
 
 
-    <RelativeLayout
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_category"
         android:layout_width="match_parent"
+        android:layout_margin="@dimen/margin_8"
         android:layout_height="match_parent"
         />
 
